:sparkles: feat: modification link repository

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-        <a class="navbar-brand" href="">Link do repositório</a>
+        <a class="navbar-brand" href="https://github.com/KainanGV/jogo-velha-minimax.git">Link do repositório</a>
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
